# OmniDB

./: .dockerignore  Dockerfile  pyproject.toml
OmniDB/: config.py
OmniDB/OmniDB/: asgi.py  custom_settings.py  settings.py  urls.py
OmniDB/OmniDB_app/: backends.py  middleware.py  urls.py
OmniDB/OmniDB_app/include/: Session.py
OmniDB/OmniDB_app/include/OmniDatabase/: MariaDB.py  MySQL.py  Oracle.py  PostgreSQL.py  SQLite.py  __init__.py
OmniDB/OmniDB_app/include/Spartacus/: Database.py  Utils.py
OmniDB/OmniDB_app/management/commands/: runasgi.py
OmniDB/OmniDB_app/static/OmniDB_app/js/: ajax_control.js  create_tab_functions.js  long_polling.js  notification_control.js  workspace.js
OmniDB/OmniDB_app/static/OmniDB_app/js/tab_functions/: outer_welcome_tab.js
OmniDB/OmniDB_app/static/OmniDB_app/js/tutorial_functions/: tutorial.js
OmniDB/OmniDB_app/templates/OmniDB_app/: login.html
OmniDB/OmniDB_app/views/: __init__.py  login.py  memory_objects.py  polling.py
OmniDB/OmniDB_app/views/fastapi/: __init__.py  connections.py  dependencies.py  login.py  schemas.py  tree_mysql.py  tree_postgresql.py  workspace.py
